- new feature: "get full library" button in settings - downloads and sets up the shortcut-file library - bug fix: when on mobile, settings with multiple buttons don't separate buttons enough

--- a/styles.css
+++ b/styles.css
@@ -120,3 +120,7 @@
 	background-color: red;
 	color: white;
 }
+.is-mobile .tejs_button
+{
+	margin: 0em .25em !important;
+}
